--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - '5432:5432'
     environment:
       - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=gamify
     volumes:
       - 'pgdata:/data/postgres'
