--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^4.9.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "joi": "^17.9.2"
   }
 }
