--- a/server/package.json
+++ b/server/package.json
@@ -5,25 +5,28 @@
   "main": "src/server.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsnd --exit-child src/server.ts"
+    "dev": "tsnd src/server.ts"
   },
   "author": "Mateus Flores",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/luxon": "^3.3.0",
+    "@types/multer": "^1.4.7",
     "express": "^4.18.2",
     "prisma": "^4.9.0",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/luxon": "^3.3.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "joi": "^17.9.2",
-    "luxon": "^3.3.0"
+    "luxon": "^3.3.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
