--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^4.9.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "fs": "^0.0.1-security",
     "joi": "^17.9.2",
     "luxon": "^3.3.0",
     "multer": "^1.4.5-lts.1"
